# bete

./: CLAUDE.md  CNAME  README.md  cachebust.mjs  index.html  manifest.json
.claude/: launch.json
.github/workflows/: desktop-release.yml
css/: style.css
desktop/: README.md  package-lock.json  package.json
desktop/scripts/: sync.mjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: default.toml
desktop/src-tauri/src/: lib.rs  main.rs
js/: audio.js  boards.js  camera.js  connector.js  debug.js  exportHtml.js  fx.js  geom.js  history.js  i18n.js  ics.js  images.js  input.js  io.js  liaisons.js  main.js  minimap.js  physics.js  platform.js  render.js  settings.js  state.js  sync.js  theme.js  tutorial.js  update.js  users.js  video.js  voice.js  voicechat.js  yt.js
scripts/: translate-tutorial.mjs
server/: .gitignore  README.md  bete-host.js  install-pi.sh  package.json  todomappa-host.js
