[package]
name = "bete"
version = "0.1.0"
description = "Bete - pixel-art mindmap (desktop wrapper)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
local-ip-address = "0.6"

[[bin]]
name = "bete"
path = "src/main.rs"
