[package]
name = "bete"
version = "0.6.0"
description = "Bete - pixel-art mindmap (desktop wrapper)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
local-ip-address = "0.6"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[[bin]]
name = "bete"
path = "src/main.rs"
